- Move footer styles into their own file - Refactor footer (there were some issues with content overflowing on certain pages) - Rename footer icons

--- a/_sass/experience.scss
+++ b/_sass/experience.scss
@@ -142,9 +142,4 @@
       }
     }
   }
-  @include mobile {
-    .footer {
-      height: 100%;
-    }
-  }
 }
