--- a/_sass/listings.scss
+++ b/_sass/listings.scss
@@ -1,11 +1,4 @@
 #container-listings {
-  .footer {
-    position: relative;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-  }
-
   background-image: url(../images/about/fs-bg.jpg);
   background-size: cover;
   .listings-header {
